@@ -113,19 +113,54 @@ class ElasticsearchIntegrationTest {
         searchRequest.setMessage(message);
     }
 
+    /*
     @BeforeEach
-    void setUp() throws Exception {
-        if (!dataLoaded) {
-            try {
-                createIndexWithRetry();
-                loadTestDataWithRetry();
-                dataLoaded = true;
-            } catch (Exception e) {
-                System.err.println("Failed to set up test data: " + e.getMessage());
-                System.err.println("Container logs: " + elasticsearchContainer.getLogs());
-                throw e;
-            }
+    void setUp() throws IOException {
+        // Create index with mapping
+        String mappingJson = "{\n" +
+            "  \"mappings\": {\n" +
+            "    \"properties\": {\n" +
+            "      \"providers_locations_gps\": {\n" +
+            "        \"type\": \"geo_point\"\n" +
+            "      }\n" +
+            "    }\n" +
+            "  }\n" +
+            "}";
+
+        // Delete index if exists
+        if (elasticsearchClient.indices().exists(e -> e.index("test-domain")).value()) {
+            elasticsearchClient.indices().delete(d -> d.index("test-domain"));
         }
+        
+        // Create index with mapping
+        elasticsearchClient.indices().create(c -> c
+            .index("test-domain")
+            .withJson(new StringReader(mappingJson))
+        );
+        
+        // Index test data
+        indexTestData("test-domain");
+    }
+    */
+
+
+    @BeforeEach
+    void setUp() throws IOException {
+
+        // Delete index if exists
+        if (elasticsearchClient.indices().exists(e -> e.index("test-domain")).value()) {
+            elasticsearchClient.indices().delete(d -> d.index("test-domain"));
+        }
+
+        String mappingJson = loadResourceAsString("/elasticsearch/ev_catalog_index_mapping.json");
+        // Create index with mapping
+        elasticsearchClient.indices().create(c -> c
+                .index("test-domain")
+                .withJson(new StringReader(mappingJson))
+        );
+
+        // Index test data
+        indexTestData("test-domain");
     }
 
     private void createIndexWithRetry() throws Exception {
@@ -139,7 +174,7 @@ class ElasticsearchIntegrationTest {
                 ).value();
                 
                 if (!indexExists) {
-                    String mappingJson = loadResourceAsString("/elasticsearch/mapping.json");
+                    String mappingJson = loadResourceAsString("/elasticsearch/ev_catalog_index_mapping.json");
                     elasticsearchClient.indices().create(builder -> 
                         builder.index(INDEX_NAME)
                 .withJson(new StringReader(mappingJson))
@@ -222,7 +257,26 @@ class ElasticsearchIntegrationTest {
 
     @Test
     void testResponseMapping() throws IOException {
-        String rawCatalog = searchService.searchAndGetRawCatalog(searchRequest);
+        // Create a search request that matches test data
+        SearchRequestDto request = new SearchRequestDto();
+        Context context = new Context();
+        context.setDomain("test-domain");
+        request.setContext(context);
+        
+        Message message = new Message();
+        Intent intent = new Intent();
+        
+        // Add item filter that matches test data
+        Item item = new Item();
+        Descriptor itemDescriptor = new Descriptor();
+        itemDescriptor.setName("Test Product 1");
+        item.setDescriptor(itemDescriptor);
+        intent.setItems(List.of(item));
+        
+        message.setIntent(intent);
+        request.setMessage(message);
+
+        String rawCatalog = searchService.searchAndGetRawCatalog(request);
         
         assertNotNull(rawCatalog, "Raw catalog should not be null");
         assertNotEquals("[]", rawCatalog, "Raw catalog should not be empty");
@@ -248,7 +302,7 @@ class ElasticsearchIntegrationTest {
         Descriptor itemDescriptor = new Descriptor();
         itemDescriptor.setName("Test Product 2");
         item.setDescriptor(itemDescriptor);
-        intent.setItems(Arrays.asList(item));
+        intent.setItems(List.of(item));
         
         // Add provider filter
         Provider provider = new Provider();
@@ -292,21 +346,187 @@ class ElasticsearchIntegrationTest {
         message.setIntent(intent);
         request.setMessage(message);
 
-        // First request should fail as index doesn't exist
-        assertThrows(IllegalArgumentException.class, () -> searchService.searchAndGetResponse(request, 0, 10, SearchQueryBuilder.LogicalOperator.AND));
-
-        // Create index with hyphenated name
-        String indexName = "test-domain";
-        createIndex(indexName);
-        indexTestData(indexName);
-
-        // Now search should work
-        SearchResponseDto response = searchService.searchAndGetResponse(request, 0, 10, SearchQueryBuilder.LogicalOperator.AND);
+        // Search should work as colons are replaced with hyphens
+        SearchResponseDto response = searchService.searchAndGetResponse(request);
+        
         assertNotNull(response);
         assertNotNull(response.getMessage());
         assertNotNull(response.getMessage().getCatalog());
-        assertNotNull(response.getMessage().getCatalog().getProviders());
     }
+
+    @Test
+    void testProviderLocationAndFulfillmentFilters() throws IOException {
+        // Create a search request with location and fulfillment filters
+        SearchRequestDto request = new SearchRequestDto();
+        
+        // Set up context
+        Context context = new Context();
+        context.setDomain("test-domain");
+        context.setTransactionId("12345678-aaaa-bbbb-cccc-1234567890ab");
+        context.setMessageId("abcdef12-3456-7890-abcd-ef1234567890");
+        context.setTimestamp("2025-04-15T10:30:00Z");
+        request.setContext(context);
+        
+        // Add provider with location and fulfillment filters
+        Message message = new Message();
+        Intent intent = new Intent();
+        
+        Provider provider = new Provider();
+        
+        // Add location filter
+        Location location = new Location();
+        location.setGps("30.2672,-97.7431");
+        provider.setLocations(List.of(location));
+        
+        // Add fulfillment filter
+        Fulfillment fulfillment = new Fulfillment();
+        fulfillment.setType("onsite");
+        provider.setFulfillments(List.of(fulfillment));
+        
+        intent.setProviders(List.of(provider));
+        message.setIntent(intent);
+        request.setMessage(message);
+
+        // Search and get response
+        SearchResponseDto response = searchService.searchAndGetResponse(request);
+        
+        // Verify the response
+        assertNotNull(response, "Response should not be null");
+        assertNotNull(response.getMessage(), "Message should not be null");
+        assertNotNull(response.getMessage().getCatalog(), "Catalog should not be null");
+        assertNotNull(response.getMessage().getCatalog().getProviders(), "Providers should not be null");
+        
+        // Verify that we get exactly one result (doc3)
+        JsonNode providers = response.getMessage().getCatalog().getProviders();
+        assertTrue(providers.isArray() || providers.isObject(), "Providers should be either an array or object");
+        
+        // If it's an array, verify we have exactly one element
+        if (providers.isArray()) {
+            assertEquals(1, providers.size(), "Should return exactly one result");
+            
+            // Verify it's the EV charger provider
+            JsonNode resultProvider = providers.get(0);
+            assertEquals("ecocharge-austin-0", resultProvider.get("id").asText(), "Should match the EV charger provider ID");
+            assertEquals("EcoCharge", resultProvider.get("descriptor").get("name").asText(), "Should match the EV charger provider name");
+            
+            // Verify the location matches
+            JsonNode locations = resultProvider.get("locations");
+            assertTrue(locations.isArray(), "Locations should be an array");
+            assertEquals("30.2672,-97.7431", locations.get(0).get("gps").asText(), "GPS coordinates should match");
+            
+            // Verify the fulfillment matches
+            JsonNode fulfillments = resultProvider.get("fulfillments");
+            assertTrue(fulfillments.isArray(), "Fulfillments should be an array");
+            assertEquals("onsite", fulfillments.get(0).get("type").asText(), "Fulfillment type should match");
+        }
+    }
+
+    @Test
+    void testProviderGeoDistanceSearch() throws Exception {
+        // Create a search request with GPS coordinates
+        SearchRequestDto request = new SearchRequestDto();
+        Context context = new Context();
+        context.setDomain("test-domain");
+
+        // Add provider with location and fulfillment filters
+        Message message = new Message();
+        Intent intent = new Intent();
+
+        Provider provider = new Provider();
+
+        // Add location filter
+        Location location = new Location();
+        location.setGps("30.2672,-97.7431");
+        provider.setLocations(List.of(location));
+
+        intent.setProviders(List.of(provider));
+        message.setIntent(intent);
+        request.setMessage(message);
+
+        request.setContext(context);
+        request.setMessage(message);
+
+        // Search with geo distance filter
+        var response = searchService.searchAndGetResponse(request);
+        
+        assertNotNull(response);
+        assertNotNull(response.getMessage());
+        assertNotNull(response.getMessage().getCatalog());
+
+        // Verify that we get exactly one result (doc3)
+        JsonNode providers = response.getMessage().getCatalog().getProviders();
+        assertTrue(providers.isArray() || providers.isObject(), "Providers should be either an array or object");
+
+        // If it's an array, verify we have exactly one element
+        if (providers.isArray()) {
+            assertEquals(1, providers.size(), "Should return exactly one result");
+
+            // Verify it's the EV charger provider
+            JsonNode resultProvider = providers.get(0);
+            assertEquals("EcoCharge", resultProvider.get("descriptor").get("name").asText(), "Should match the EV charger provider name");
+        }
+    }
+
+    @Test
+    void testContextGeoDistanceSearch() throws Exception {
+        // Create a search request with GPS coordinates
+        SearchRequestDto request = new SearchRequestDto();
+        Context context = new Context();
+        context.setDomain("test-domain");
+
+        Location location = new Location();
+        location.setGps("30.2672,-97.7431"); // Austin, TX coordinates
+        context.setLocation(location);
+
+        Message message = new Message();
+        request.setContext(context);
+        request.setMessage(message);
+
+        // Search with geo distance filter
+        var response = searchService.searchAndGetResponse(request);
+
+        assertNotNull(response);
+        assertNotNull(response.getMessage());
+        assertNotNull(response.getMessage().getCatalog());
+
+        // Verify that we get exactly one result (doc3)
+        JsonNode providers = response.getMessage().getCatalog().getProviders();
+        assertTrue(providers.isArray() || providers.isObject(), "Providers should be either an array or object");
+
+        // If it's an array, verify we have exactly one element
+        if (providers.isArray()) {
+            assertEquals(1, providers.size(), "Should return exactly one result");
+
+            // Verify it's the EV charger provider
+            JsonNode resultProvider = providers.get(0);
+            assertEquals("EcoCharge", resultProvider.get("descriptor").get("name").asText(), "Should match the EV charger provider name");
+        }
+    }
+
+    /*
+    @Test
+    void testGeoBoundingBoxSearch() throws Exception {
+        // Create a search request with GPS coordinates
+        SearchRequestDto request = new SearchRequestDto();
+        Context context = new Context();
+        context.setDomain("test-domain");
+        
+        Location location = new Location();
+        location.setGps("30.2672,-97.7431"); // Austin, TX coordinates
+        context.setLocation(location);
+        
+        Message message = new Message();
+        request.setContext(context);
+        request.setMessage(message);
+
+        // Search with geo bounding box filter
+        var response = searchService.searchAndGetResponse(request);
+        
+        assertNotNull(response);
+        assertNotNull(response.getMessage());
+        assertNotNull(response.getMessage().getCatalog());
+    }
+    */
 
     private void createIndex(String indexName) throws IOException {
         if (!elasticsearchClient.indices().exists(e -> e.index(indexName)).value()) {
@@ -318,16 +538,50 @@ class ElasticsearchIntegrationTest {
         // Create test data
         BulkRequest.Builder br = new BulkRequest.Builder();
         
-        // Add test documents
+        // Add test documents with flattened structure for better searching
         Map<String, Object> doc1 = new HashMap<>();
-        doc1.put("provider_descriptor_name", "Provider 1");
-        doc1.put("items_descriptor_name", Arrays.asList("Test Product 1"));
-        doc1.put("raw_catalog", "{\"message\":{\"catalog\":{\"descriptor\":{\"name\":\"Test Catalog 1\"},\"providers\":[{\"id\":\"provider1\",\"descriptor\":{\"name\":\"Provider 1\"},\"items\":[{\"id\":\"test-product-1\",\"descriptor\":{\"name\":\"Test Product 1\"},\"price\":{\"value\":\"24\",\"currency\":\"USD\"}}]}]}}}");
+        doc1.put("context_domain", "test-domain");
+        doc1.put("providers_id", "provider1");
+        doc1.put("providers_descriptor_name", "Provider 1");
+        doc1.put("items_descriptor_name", List.of("Test Product 1"));
+        doc1.put("items_price_value", "24");
+        doc1.put("items_price_currency", "USD");
+        doc1.put("raw_catalog", "{\"message\":{\"catalog\":{\"descriptor\":{\"name\":\"Test Catalog 1\",\"code\":\"CAT1\"},\"providers\":[{\"id\":\"provider1\",\"descriptor\":{\"name\":\"Provider 1\"},\"items\":[{\"id\":\"test-product-1\",\"descriptor\":{\"name\":\"Test Product 1\"},\"price\":{\"value\":\"24\",\"currency\":\"USD\"}}]}]}}}");
 
         Map<String, Object> doc2 = new HashMap<>();
-        doc2.put("provider_descriptor_name", "Provider 2");
-        doc2.put("items_descriptor_name", Arrays.asList("Test Product 2"));
-        doc2.put("raw_catalog", "{\"message\":{\"catalog\":{\"descriptor\":{\"name\":\"Test Catalog 2\"},\"providers\":[{\"id\":\"provider2\",\"descriptor\":{\"name\":\"Provider 2\"},\"items\":[{\"id\":\"test-product-2\",\"descriptor\":{\"name\":\"Test Product 2\"},\"price\":{\"value\":\"48\",\"currency\":\"USD\"}}]}]}}}");
+        doc2.put("context_domain", "test-domain");
+        doc2.put("providers_id", "provider2");
+        doc2.put("providers_descriptor_name", "Provider 2");
+        doc2.put("items_descriptor_name", List.of("Test Product 2"));
+        doc2.put("items_price_value", "48");
+        doc2.put("items_price_currency", "USD");
+        doc2.put("raw_catalog", "{\"message\":{\"catalog\":{\"descriptor\":{\"name\":\"Test Catalog 2\",\"code\":\"CAT2\"},\"providers\":[{\"id\":\"provider2\",\"descriptor\":{\"name\":\"Provider 2\"},\"items\":[{\"id\":\"test-product-2\",\"descriptor\":{\"name\":\"Test Product 2\"},\"price\":{\"value\":\"48\",\"currency\":\"USD\"}}]}]}}}");
+
+        Map<String, Object> doc3 = new HashMap<>();
+        doc3.put("context_domain", "test-domain");
+        doc3.put("context_location_gps", "30.2672,-97.7431");  // Changed to string for geo_point
+        doc3.put("providers_id", "ecocharge-austin-0");
+        doc3.put("providers_descriptor_name", "EcoCharge");
+        doc3.put("providers_locations_gps", "30.2672,-97.7431");  // Changed to string for geo_point
+        doc3.put("providers_locations_address", "233 Main St, Austin, Texas");
+        doc3.put("providers_locations_city_name", "Austin");
+        doc3.put("providers_locations_state_name", "Texas");
+        doc3.put("providers_locations_country_name", "USA");
+        doc3.put("providers_locations_area_code", "73301");
+        doc3.put("providers_fulfillments_type", List.of("onsite"));
+        doc3.put("items_id", List.of("ecocharge-austin-0-item-0"));
+        doc3.put("items_descriptor_name", List.of("150kW EV Charger"));
+        doc3.put("items_descriptor_short_desc", List.of("150kW public-dc Charger"));
+        doc3.put("items_price_value", List.of("24"));
+        doc3.put("items_price_currency", List.of("USD"));
+        doc3.put("items_quantity_available_count", List.of(1));
+        doc3.put("items_category_ids", List.of("public-dc"));
+        doc3.put("items_fulfillment_ids", List.of("ful-ecocharge-austin-0"));
+        doc3.put("items_rating", List.of(2.9));
+        doc3.put("items_tags_list_value", Arrays.asList("CCS", "CHAdeMO"));
+        doc3.put("items_tags_list_descriptor_code", Arrays.asList("port_type", "port_type"));
+        doc3.put("items_tags_list_descriptor_name", Arrays.asList("CCS", "CHAdeMO"));
+        doc3.put("raw_catalog", "{\"message\":{\"catalog\":{\"descriptor\":{\"name\":\"EcoCharge-Retail-Catalog\",\"code\":\"CATALOG-001\",\"short_desc\":\"Retail catalog\",\"long_desc\":\"Comprehensive retail catalog with multiple providers\"},\"providers\":[{\"id\":\"ecocharge-austin-0\",\"descriptor\":{\"name\":\"EcoCharge\"},\"locations\":[{\"gps\":\"30.2672,-97.7431\",\"address\":\"233 Main St, Austin, Texas\",\"city\":{\"name\":\"Austin\"},\"state\":{\"name\":\"Texas\"},\"country\":{\"name\":\"USA\"},\"area_code\":\"73301\"}],\"fulfillments\":[{\"type\":\"onsite\"}],\"items\":[{\"id\":\"ecocharge-austin-0-item-0\",\"descriptor\":{\"name\":\"150kW EV Charger\",\"short_desc\":\"150kW public-dc Charger\"},\"price\":{\"value\":\"24\",\"currency\":\"USD\"},\"quantity\":{\"available\":{\"count\":1}},\"category_ids\":[\"public-dc\"],\"fulfillment_ids\":[\"ful-ecocharge-austin-0\"],\"rating\":2.9,\"tags\":[{\"list\":[{\"value\":\"CCS\",\"descriptor\":{\"code\":\"port_type\",\"name\":\"CCS\"}},{\"value\":\"CHAdeMO\",\"descriptor\":{\"code\":\"port_type\",\"name\":\"CHAdeMO\"}}]}]}]}]}}}");
 
         br.operations(op -> op
             .index(i -> i
@@ -341,9 +595,18 @@ class ElasticsearchIntegrationTest {
                 .id("2")
                 .document(doc2)
             )
+        ).operations(op -> op
+            .index(i -> i
+                .index(indexName)
+                .id("3")
+                .document(doc3)
+            )
         );
 
-        elasticsearchClient.bulk(br.build());
+        BulkResponse response = elasticsearchClient.bulk(br.build());
+        if (response.errors()) {
+            throw new RuntimeException("Failed to index test data: " + response.items().get(0).error().reason());
+        }
         elasticsearchClient.indices().refresh(r -> r.index(indexName));
     }
 } 
